welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:11: error: '(' expected but '{' found.
		while {vuBiscuit == false}
                      ^Program:12: error: illegal start of simple expression
	}
        ^Program:13: error: 'while' expected but '}' found.
}
^